# ComputerActivityLogReading

./: CMakeLists.txt  example_log.txt  log_creator_example.sh
src/: TimeContainer.cpp  TimeContainer.h  cmd_options.cpp  cmd_options.h  main.cpp  variables.h
src/cmd/: cmd_options_basic_data.h  cmd_options_parser.cpp  cmd_options_parser.h  cmd_options_processor.cpp  cmd_options_processor.h  cmd_options_progress_data.h
src/core/: activity_analyzer.cpp  activity_analyzer.h  anomalies_detector.cpp  anomalies_detector.h  day.h  log_handler.cpp  log_handler.h  time_container.cpp  time_container.h  variables.h
src/useful_collections/: time_container.h
src/usefull_collections/: day.cpp  day.h  week.cpp  week.h
src/utilities/: boost_extensions.cpp  boost_extensions.h  boost_extentions.cpp  boost_extentions.h  design_text.cpp  design_text.h  exceptions.cpp  exceptions.h  std_extensions.cpp  std_extensions.h  std_extentions.cpp  std_extentions.h
